// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should hide when loading prop is true 1`] = `
<div>
  <div
    class="_frame_331539 _hidden_331539"
  >
    <img
      alt="test"
      src="test"
    />
    <svg
      viewBox="0 0 0.5625 1"
    />
  </div>
</div>
`;

exports[`should render 1`] = `
<div>
  <div
    class="_frame_331539 test"
    style="background: red;"
  >
    <img
      alt="test"
      src="test"
    />
    <svg
      viewBox="0 0 1.7777777777777777 1"
    />
  </div>
</div>
`;
